Тесты интеграционный тест ProductController